# netbox_autocabling

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/ipmi_autocabling/: __init__.py  __main__.py  config.py  correlator.py  fdb_collector.py  logging_config.py  mac_utils.py  netbox_client.py  port_classifier.py  service.py  state_db.py
tests/: test_mac_utils.py  test_port_classifier.py
